examples/test/testpolicy15399.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15399
  namespace: namespace266
spec:
  podSelector:
    matchLabels:
      key8: value35
      key35: value25
      key2: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value46
          key3: value17
          key28: value49
      podSelector:
        matchLabels:
          key49: value37
          key14: value7
          key0: value9
